--- a/trunk/site/templates/clients/viewclient.html
+++ b/trunk/site/templates/clients/viewclient.html
@@ -11,7 +11,7 @@
 
 <table width="100%">
   <tr>
-    <td valign="top">
+    <td width="50%" valign="top">
       <table>
           {% for value in client_values %}
           <tr>
@@ -25,7 +25,7 @@
     <td valign="top">
       <p><strong>Contact Numbers</strong>
       <a title="Add a new contact number"
-         href="/clients/client/capturephone?containerkey={{ client.key }}">
+         href="/clients/contact/capturephone?containerkey={{ client.key }}">
           <img src="/images/add.png"/>
         </a>
       </p>
@@ -40,12 +40,12 @@
               <td>{{ number.number }}</td>
               <td class="action">
                 <a title="Edit this contact number"
-                   href="/clients/client/editphone?phonekey={{ number.key }}">
+                   href="/clients/contact/editphone?phonekey={{ number.key }}">
                 <img src="/images/edit.png"/></a></td>
                 </a></td>
               <td class="action">
                 <a title="Delete this contact number"
-                   href="/clients/client/deletephone?phonekey={{ number.key }}"
+                   href="/clients/contact/deletephone?phonekey={{ number.key }}"
                    onclick="return confirm('Are you sure?');">
                 <img src="/images/delete.png"/></a></td>
                 </a></td>
@@ -56,7 +56,7 @@
       <hr />
       <p><strong>Email Addresses</strong>
       <a title="Add a new email address"
-         href="/clients/client/captureemail?containerkey={{ client.key }}">
+         href="/clients/email/captureemail?containerkey={{ client.key }}">
           <img src="/images/add.png"/></a>
       </p>
       <table class="listing">
@@ -70,12 +70,12 @@
               <td>{{ email.email }}</td>
               <td class="action">
                 <a title="Edit this email address"
-                   href="/clients/client/editemail?emailkey={{ email.key }}">
+                   href="/clients/email/editemail?emailkey={{ email.key }}">
               <img src="/images/edit.png"/></a></td>
               </a></td>
               <td class="action">
                 <a title="Delete this email address"
-                   href="/clients/client/deleteemail?emailkey={{ email.key }}"
+                   href="/clients/email/deleteemail?emailkey={{ email.key }}"
                    onclick="return confirm('Are you sure?');">
                 <img src="/images/delete.png"/></a></td>
               </a></td>
@@ -86,7 +86,7 @@
       <hr />
       <p><strong>Addresses</strong>
       <a title="Add a new address"
-         href="/clients/client/captureaddress?containerkey={{ client.key }}">
+         href="/clients/address/captureaddress?containerkey={{ client.key }}">
           <img src="/images/add.png"/>
       </a>
       </p>
@@ -102,12 +102,12 @@
               <td>{{ address.listing_name }}</td>
               <td class="action">
                 <a title="Edit this address"
-                   href="/clients/client/editaddress?addresskey={{ address.key }}">
+                   href="/clients/address/editaddress?addresskey={{ address.key }}">
               <img src="/images/edit.png"/></a></td>
               </a></td>
               <td class="action">
                 <a title="Delete this address"
-                   href="/clients/client/deleteaddress?addresskey={{ address.key }}"
+                   href="/clients/address/deleteaddress?addresskey={{ address.key }}"
                    onclick="return confirm('Are you sure?');">
                 <img src="/images/delete.png"/></a></td>
               </a></td>
