--- a/trunk/site/templates/common/captureemail.html
+++ b/trunk/site/templates/common/captureemail.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block pagecontent %}
-    <h1>Edit Existing Address</h1>
-    <form name="address" method="post" action="/services/owner/editaddress">
-        <input type="hidden" name="addresskey" value="{{ addresskey }}" />
+    <h1>Capture an Email Address</h1>
+    <form name="emailaddress" method="post" action="{{ post_url }}">
+        <input type="hidden" name="containerkey" value="{{ containerkey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
         <table>
             {{ form }}
         </table>
-        <input type="submit" value="Update Address" />
+        <input type="submit" value="Add Email" />
     </form>
 {% endblock pagecontent %}
