--- a/trunk/site/templates/common/editemail.html
+++ b/trunk/site/templates/common/editemail.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block pagecontent %}
-    <h1>Capture a Contact Number</h1>
-    <form name="phonenumber" method="post" action="/services/owner/capturephone">
-        <input type="hidden" name="containerkey" value="{{ containerkey }}" />
+    <h1>Edit Existing Email Address</h1>
+    <form name="emailaddress" method="post" action="{{ post_url }}">
+        <input type="hidden" name="emailkey" value="{{ emailkey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
         <table>
             {{ form }}
         </table>
-        <input type="submit" value="Add Number" />
+        <input type="submit" value="Update Email" />
     </form>
 {% endblock pagecontent %}
