--- a/trunk/site/templates/common/editphonenumber.html
+++ b/trunk/site/templates/common/editphonenumber.html
@@ -6,7 +6,7 @@
 
 {% block pagecontent %}
     <h1>Edit Existing Contact Number</h1>
-    <form name="number" method="post" action="/services/owner/editphone">
+    <form name="number" method="post" action="{{ post_url }}">
         <input type="hidden" name="phonekey" value="{{ phonekey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
         <table>
