--- a/trunk/site/templates/services/capturebed.html
+++ b/trunk/site/templates/services/capturebed.html
@@ -1,8 +1,12 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="{{came_from}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
-    <h1>Capture an Bed</h1>
-    <form name="bed" method="post" action="/services/owner/capturebed">
+    <h1>Capture a Bed</h1>
+    <form name="bed" method="post" action="/services/owner/venue/capturebed">
         <input type="hidden" name="containerkey" value="{{ containerkey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
         <table>
