--- a/trunk/site/templates/services/capturebedroom.html
+++ b/trunk/site/templates/services/capturebedroom.html
@@ -1,8 +1,12 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="{{came_from}}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Capture an Bedroom</h1>
-    <form name="bedroom" method="post" action="/services/owner/capturebedroom">
+    <form name="bedroom" method="post" action="/services/owner/venue/capturebedroom">
         <input type="hidden" name="containerkey" value="{{ containerkey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
         <table>
