--- a/trunk/site/templates/services/captureowner.html
+++ b/trunk/site/templates/services/captureowner.html
@@ -6,7 +6,7 @@
 
 {% block pagecontent %}
     <h1>Capture New Owner</h1>
-    <form name="owner" method="post" action="/services/captureowner">
+    <form name="owner" method="post" action="/services/owner/captureowner">
         <table>
             {{ form }}
         </table>
