--- a/trunk/site/templates/services/editbathroom.html
+++ b/trunk/site/templates/services/editbathroom.html
@@ -6,7 +6,7 @@
 
 {% block pagecontent %}
     <h1>Edit Existing Bathroom</h1>
-    <form name="instspection" method="post" action="/services/owner/editbathroom">
+    <form name="bathroom" method="post" action="/services/owner/venue/editbathroom">
         <input type="hidden" name="bathroomkey" value="{{ bathroomkey }}" />
         <input type="hidden" name="came_from" value="{{ came_from }}" />
         <table>
