--- a/trunk/site/templates/services/editowner.html
+++ b/trunk/site/templates/services/editowner.html
@@ -6,7 +6,7 @@
 
 {% block pagecontent %}
     <h1>Edit Existing Owner</h1>
-    <form name="owner" method="post" action="/services/editowner">
+    <form name="owner" method="post" action="/services/owner/editowner">
         <input type="hidden" name="ownerkey" value="{{ ownerkey }}" />
         <table>
             {{ form }}
