--- a/trunk/site/templates/services/viewbedroom.html
+++ b/trunk/site/templates/services/viewbedroom.html
@@ -1,5 +1,9 @@
 {% extends base_path %}
 
+{% block breadcrumbs %}
+<a href="/services/owner/viewvenue?venuekey={{ venuekey }}">go back</a>
+{% endblock %}
+
 {% block pagecontent %}
     <h1>Bedroom</h1>
 
@@ -15,7 +19,7 @@
     <hr />
       <p><strong>Beds</strong>
       <a title="Add a new bed"
-         href="/services/owner/capturebed?containerkey={{ bedroom.key }}">
+         href="/services/owner/venue/capturebed?containerkey={{ bedroom.key }}">
           <img src="/images/add.png"/></a></td>
         </a>
       </p>
@@ -31,12 +35,12 @@
             <td>{{ bed.capacity }}</td>
             <td class="action">
               <a title="Edit this bed"
-                href="/services/owner/editbed?bedkey={{ bed.key }}">
+                href="/services/owner/venue/editbed?bedkey={{ bed.key }}">
                 <img src="/images/edit.png"/>
               </a></td>
             <td class="action">
               <a title="Delete this bed" 
-                href="/services/owner/deletebed?bedkey={{ bed.key }}"
+                href="/services/owner/venue/deletebed?bedkey={{ bed.key }}"
                 onclick="return confirm('Are you sure?');">
                 <img src="/images/delete.png"/>
               </a></td>
