--- a/trunk/site/templates/services/viewvenue.html
+++ b/trunk/site/templates/services/viewvenue.html
@@ -1,7 +1,7 @@
 {% extends base_path %}
 
 {% block breadcrumbs %}
-<a href="/services/viewowner?ownerkey={{ownerkey}}">go back</a>
+<a href="/services/owner/viewowner?ownerkey={{ownerkey}}">go back</a>
 {% endblock %}
 
 {% block pagecontent %}
@@ -13,7 +13,7 @@
       <table>
           <tr>
             <td><strong>Owner:</strong></td>
-            <td><a href="/services/viewowner?ownerkey={{ownerkey}}">
+            <td><a href="/services/owner/viewowner?ownerkey={{ownerkey}}">
                 {{ owner_name }} </a>
             </td>
           </tr>
@@ -28,7 +28,7 @@
     <td valign="top">
       <p><strong>Contact Numbers</strong>
       <a title="Add to number"
-        href="/services/owner/capturephone?containerkey={{ venue.key }}">
+        href="/services/owner/venue/contact/capturephone?containerkey={{ venue.key }}">
         <img src="/images/add.png"/>
       </a>
       </p>
@@ -44,14 +44,14 @@
               <td>{{ number.number }}</td>
               <td class="action">
                 <a title="Edit this number"
-                  href="/services/owner/editphone?phonekey={{ number.key }}">
+                  href="/services/owner/venue/contact/editphone?phonekey={{ number.key }}">
                   <img src="/images/edit.png"/>
                 </a>
               </td>
 
               <td class="action">
                 <a title="Delete this number"
-                  href="/services/owner/deletephone?phonekey={{ number.key }}"
+                  href="/services/owner/venue/contact/deletephone?phonekey={{ number.key }}"
                    onclick="return confirm('Are you sure?');">
                   <img src="/images/delete.png"/>
                 </a></td>
@@ -62,7 +62,7 @@
       <hr />
       <p><strong>Email Addresses</strong>
       <a title="Add a new email address"
-         href="/services/owner/captureemail?containerkey={{ venue.key }}">
+         href="/services/owner/venue/email/captureemail?containerkey={{ venue.key }}">
        <img src="/images/add.png"/>
       </a></p>
       <table class="listing">
@@ -76,12 +76,12 @@
               <td>{{ email.email }}</td>
               <td class="action">
                 <a title="Edit this email address"
-                  href="/services/owner/editemail?emailkey={{ email.key }}">
+                  href="/services/owner/venue/email/editemail?emailkey={{ email.key }}">
                   <img src="/images/edit.png"/>
                 </a></td>
                 <td class="action">
                   <a title="Delete this email address"
-                    href="/services/owner/deleteemail?emailkey={{ email.key }}"
+                    href="/services/owner/venue/email/deleteemail?emailkey={{ email.key }}"
                    onclick="return confirm('Are you sure?');">
                     <img src="/images/delete.png"/>
                   </a></td>
@@ -92,7 +92,7 @@
       <hr />
       <p><strong>Addresses</strong>
       <a title="Add a new address"
-        href="/services/owner/captureaddress?containerkey={{ venue.key }}">
+        href="/services/owner/venue/address/captureaddress?containerkey={{ venue.key }}">
         <img src="/images/add.png"/>
       </a></p>
 
@@ -107,12 +107,12 @@
               <td>{{ address.listing_name }}</td>
               <td class="action">
                 <a title="Edit this address"
-                   href="/services/owner/editaddress?addresskey={{ address.key }}">
+                   href="/services/owner/venue/address/editaddress?addresskey={{ address.key }}">
                     <img src="/images/edit.png"/>
                 </a></td>
               <td class="action">
                 <a title="Delete this address"
-                   href="/services/owner/deleteaddress?addresskey={{ address.key }}"
+                   href="/services/owner/venue/address/deleteaddress?addresskey={{ address.key }}"
                    onclick="return confirm('Are you sure?');">
                     <img src="/images/delete.png"/>
               </a></td>
@@ -128,7 +128,7 @@
     <hr />
       <p><strong>Photographs</strong>
       <a title="Add a Photograph"
-        href="/services/owner/capturephotograph?venuekey={{ venue.key }}">
+        href="/services/owner/venue/capturephotograph?venuekey={{ venue.key }}">
         <img src="/images/add.png"/>
       </a>
       </p>
@@ -142,12 +142,12 @@
                         alt="{{photo.caption}}" /></a>
                 <br />
                 <a title="Edit this Photograph"
-                  href="/services/owner/editphotograph?photokey={{ photo.key }}">
+                  href="/services/owner/venue/editphotograph?photokey={{ photo.key }}">
                   <img src="/images/edit.png"/>
                 </a>
                 &nbsp;
                 <a title="Delete this Photograph"
-                  href="/services/owner/deletephotograph?photokey={{ photo.key }}"
+                  href="/services/owner/venue/deletephotograph?photokey={{ photo.key }}"
                    onclick="return confirm('Are you sure?');">
                   <img src="/images/delete.png"/>
                 </a>
@@ -159,7 +159,7 @@
       <h3>Rooms</h3>
       <p><strong>Bedrooms</strong>
        <a title="Add a new room"
-          href="/services/owner/capturebedroom?containerkey={{ venue.key }}">
+          href="/services/owner/venue/capturebedroom?containerkey={{ venue.key }}">
          <img src="/images/add.png"/>
        </a>
       </p>
@@ -171,15 +171,15 @@
           </thead>
           {% for bedroom in bedrooms %}
           <tr>
-              <td><a href="/services/owner/viewbedroom?bedroomkey={{ bedroom.key }}">{{ bedroom.name }}</a></td>
+              <td><a href="/services/owner/venue/viewbedroom?bedroomkey={{ bedroom.key }}&venuekey={{ venue.key }}">{{ bedroom.name }}</a></td>
               <td>{{ bedroom.bathroomType }}</td>
               <td>{{ bedroom.capacity }}</td>
               <td class="action"><a title="Edit this room" 
-                     href="/services/owner/editbedroom?bedroomkey={{ bedroom.key }}">
+                     href="/services/owner/venue/editbedroom?bedroomkey={{ bedroom.key }}&venuekey={{ venue.key }}">
                   <img src="/images/edit.png"/></a></td>
               <td class="action">
                 <a title="Delete this room" 
-                   href="/services/owner/deletebedroom?bedroomkey={{ bedroom.key }}"
+                   href="/services/owner/venue/deletebedroom?bedroomkey={{ bedroom.key }}&venuekey={{ venue.key }}"
                    onclick="return confirm('Are you sure?');">
                   <img src="/images/delete.png"/></a></td>
           </tr>
@@ -189,7 +189,7 @@
       <hr />
       <p><strong>Bathrooms</strong>
       <a title="Add a new bathroom"
-        href="/services/owner/capturebathroom?containerkey={{ venue.key }}">
+        href="/services/owner/venue/capturebathroom?containerkey={{ venue.key }}">
                   <img src="/images/add.png"/></a></td>
       </a>
       </p>
@@ -202,11 +202,11 @@
           <tr>
               <td width="60%">{{ bathroom.listing_name }}</td>
               <td class="action"><a title="Edit this bathroom"
-                  href="/services/owner/editbathroom?bathroomkey={{ bathroom.key }}">
+                  href="/services/owner/venue/editbathroom?bathroomkey={{ bathroom.key }}&venuekey={{ venue.key }}">
                   <img src="/images/edit.png"/></a></td>
               </a></td>
               <td class="action"><a title="Delete this bathroom"
-                  href="/services/owner/deletebathroom?bathroomkey={{ bathroom.key }}"
+                  href="/services/owner/venue/deletebathroom?bathroomkey={{ bathroom.key }}&venuekey={{ venue.key }}"
                    onclick="return confirm('Are you sure?');">
                   <img src="/images/delete.png"/></a></td>
               </a></td>
@@ -217,7 +217,7 @@
       <h3>Other Information</h3>
       <p><strong>Inspection Records</strong>
       <a title="Add an Inspection Record"
-        href="/services/owner/captureinspection?containerkey={{ venue.key }}">
+        href="/services/owner/venue/captureinspection?containerkey={{ venue.key }}">
         <img src="/images/add.png"/>
       </a>
       </p>
@@ -232,11 +232,11 @@
               <td>{{ inspection.inspectionDate }}</td>
               <td>{{ inspection.notes }}</td>
               <td class="action">
-                <a href="/services/owner/editinspection?inspectionkey={{ inspection.key }}">
+                <a href="/services/owner/venue/editinspection?inspectionkey={{ inspection.key }}&venuekey={{ venue.key }}">
                   <img src="/images/edit.png"/></a></td>
               </a></td>
               <td class="action">
-                <a href="/services/owner/deleteinspection?inspectionkey={{ inspection.key }}"
+                <a href="/services/owner/venue/deleteinspection?inspectionkey={{ inspection.key }}&venuekey={{ venue.key }}"
                    onclick="return confirm('Are you sure?');">
                   <img src="/images/delete.png"/></a></td>
                 </a></td>
@@ -247,7 +247,7 @@
       <hr />
       <p><strong>Complaint Records</strong>
       <a title="Add a Inspection Record"
-        href="/services/owner/capturecomplaint?containerkey={{ venue.key }}">
+        href="/services/owner/venue/capturecomplaint?containerkey={{ venue.key }}">
         <img src="/images/add.png"/>
       </a>
       </p>
@@ -263,12 +263,12 @@
               <td>{{ complaint.notes }}</td>
               <td class="action">
                 <a title="Edit this complaint"
-                   href="/services/owner/editcomplaint?complaintkey={{ complaint.key }}">
+                   href="/services/owner/venue/editcomplaint?complaintkey={{ complaint.key }}&venuekey={{ venue.key }}">
                   <img src="/images/edit.png"/></a></td>
                 </a></td>
               <td class="action">
                 <a title="Delete this complaint"
-                   href="/services/owner/deletecomplaint?complaintkey={{ complaint.key }}"
+                   href="/services/owner/venue/deletecomplaint?complaintkey={{ complaint.key }}&venuekey={{ venue.key }}"
                    onclick="return confirm('Are you sure?');">
                   <img src="/images/delete.png"/></a></td>
                 </a></td>
